RESOLVED FIXED90214
[mac] WKTR windows still don't stay off screen sometimes
https://bugs.webkit.org/show_bug.cgi?id=90214
Summary [mac] WKTR windows still don't stay off screen sometimes
Tim Horton
Reported 2012-06-28 15:31:50 PDT
Attachments
patch (1.99 KB, patch)
2012-06-28 15:34 PDT, Tim Horton
simon.fraser: review+
Tim Horton
Comment 1 2012-06-28 15:34:41 PDT
Tim Horton
Comment 2 2012-06-28 15:45:30 PDT
Thanks!
Tim Horton
Comment 3 2012-06-28 15:45:54 PDT
Note You need to log in before you can comment on or make changes to this bug.