[mac] WKTR windows still don't stay off screen sometimes https://bugs.webkit.org/show_bug.cgi?id=90214 <rdar://problem/11760263>

Reviewed by Simon Fraser.

In some cases, the system itself will consult [WebKitTestRunnerWindow frame], so we should refrain from
overriding it and instead provide a different method to use when we want the web-facing "fake" window origin
(for PlatformWebView::windowFrame()).

* WebKitTestRunner/mac/PlatformWebViewMac.mm:
(-[WebKitTestRunnerWindow frameRespectingFakeOrigin]):
(WTR::PlatformWebView::windowFrame):


git-svn-id: svn://svn.chromium.org/blink/trunk@121476 bbb929c8-8fbe-4397-9dbb-9b2b20218538