third_party/WebKit/Tools/WebKitTestRunner/mac/PlatformWebViewMac.mm
@@ -73,15 +73,16 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
     [super setFrame:NSMakeRect(currentFrame.origin.x, currentFrame.origin.y, windowFrame.size.width, windowFrame.size.height) display:displayViews];
 }
 
-- (NSRect)frame
+- (NSRect)frameRespectingFakeOrigin
 {
-    NSRect currentFrame = [super frame];
+    NSRect currentFrame = [self frame];
 
     if (_shouldUseFakeOrigin)
         return NSMakeRect(_fakeOrigin.x, _fakeOrigin.y, currentFrame.size.width, currentFrame.size.height);
 
     return currentFrame;
 }
+
 @end
 
 namespace WTR {
@@ -127,7 +128,7 @@ void PlatformWebView::focus()
 
 WKRect PlatformWebView::windowFrame()
 {
-    NSRect frame = [m_window frame];
+    NSRect frame = [m_window frameRespectingFakeOrigin];
 
     WKRect wkFrame;
     wkFrame.origin.x = frame.origin.x;
